Fixed z-index issues with header section

--- a/wp-content/themes/adtrak-child/scss/abstracts/_variables.scss
+++ b/wp-content/themes/adtrak-child/scss/abstracts/_variables.scss
@@ -29,4 +29,4 @@ $primaryFont		: "sans-serif";
 /* Anything else
 --------------------------------------------------------------- */
 
-$mobile-top-bar-height 	: 40px;
+$mobile-top-bar-height 	: 60px;
