--- a/wp-content/themes/adtrak-child/scss/base/_typography.scss
+++ b/wp-content/themes/adtrak-child/scss/base/_typography.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------- */
 
 p.primary {
-	font-size: 3.5rem;
+	font-size: 3.1rem;
 	font-family: pragmatica-extended,sans-serif;
 	font-weight: 800;
 	font-style: italic;
